--- a/css/section.css
+++ b/css/section.css
@@ -37,7 +37,7 @@
 .section__button {
   background-color: hsl(0, 0%, 83%);
   border-style: none;
-  font-size: 22px;
+  font-size: 14px;
   padding: 8px;
   margin: 5px;
   cursor: context-menu; 
@@ -47,4 +47,8 @@
   color: hsl(0, 0%, 0%);
   text-decoration: none;
   cursor: context-menu;
+}
+
+.section__button--size {
+  font-size: 22px;
 }
